@@ -1,0 +1,51 @@
+﻿/*
+The MIT License
+
+Copyright (c) 2007-2008 Ixonos Plc, Kimmo Varis <kimmo.varis@ixonos.com>
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+*/
+
+// $Id$
+
+using System;
+
+namespace CheckSumTool
+{
+    /// <summary>
+    /// Environment-related utility methods.
+    /// </summary>
+    public static class EnvironmentUtils
+    {
+        /// <summary>
+        /// Return Application's data folder in user's profile folder.
+        /// This is for example:
+        /// C:\Documents and Settings\User\Application Data\ChecksumTool\
+        /// </summary>
+        /// <returns>Application data folder.</returns>
+        public static string GetAppdataPath()
+        {
+            string appDataPath = Environment.GetFolderPath(Environment.SpecialFolder.ApplicationData);
+            appDataPath = FileUtils.GetUnixPathFormat(appDataPath);
+            appDataPath += FileUtils.PathSeparator;
+            appDataPath += "ChecksumTool" + FileUtils.PathSeparator;
+            return appDataPath;
+        }
+    }
+}
