@@ -13,6 +13,7 @@ CheckSum Tool 0.5.0
   Make configuration XML file more structured.
   Add version number for the configuration file.
   Improve message asking about adding subfolders.
+  Change config file folder to %APPDATA%/ChecksumTool/
 
 CheckSum Tool 0.4.0 - 2008-02-05 (r158)
   Add Select All to Edit-menu (also CTRL+A shortcut key)
